--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    image: mysql:8.4
+    image: mysql/mysql-server
     container_name: mysql
     env_file: ./.env
     environment:
@@ -8,14 +8,11 @@ services:
       - MYSQL_PASSWORD=$MYSQLDB_PASSWORD
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
-    command: mysqld --mysql-native-password=ON
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
       - ./mysql-data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    logging:
-      driver: none
     networks:
       - app-network
 
