Darkmode 7s transition. Cambios visuales varios. Dockerfile cambio node 23.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
       dockerfile: Dockerfile
     container_name: frontend
     environment:
-      - VITE_API_URL=http://$SERVER_IP:5000
+      - VITE_API_URL=$SERVER_URL
+      - VITE_PUBLIC_HOST=$PUBLIC_HOST
     ports:
       - '3000:3000'
     depends_on:
