--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,20 +17,21 @@ services:
       - app-network
 
   frontend:
-    image: registry.kinborg.dev/kinborg/front:latest
+    image: lihuenh/blue-bookery:frontend
     container_name: frontend
-    environment:
-      - VITE_API_URL=$SERVER_URL
-      - VITE_PUBLIC_HOST=$PUBLIC_HOST
+    # environment:
+    #   - VITE_API_URL=$SERVER_URL
+    #   - VITE_PUBLIC_HOST=$PUBLIC_HOST
     ports:
       - '3000:3000'
+      - '80:80'
     depends_on:
       - backend
     networks:
       - app-network
 
   backend:
-    image: registry.kinborg.dev/kinborg/front:latest
+    image: lihuenh/blue-bookery:backend
     container_name: backend
     links:
       - mysql
@@ -47,18 +48,18 @@ services:
     networks:
       - app-network
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - '8080:80'
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - app-network
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   ports:
+  #     - '8080:80'
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - frontend
+  #     - backend
+  #   networks:
+  #     - app-network
 
 networks:
   app-network:
