--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
     "start": "vite"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.5"
   },
   "devDependencies": {
